# cpr

./: .bashrc  .gitignore  .gitmodules  CMakeLists.txt
cpr/: CMakeLists.txt  session.cpp  timeout.cpp  util.cpp
include/cpr/: api.h  body.h  cprtypes.h  curlholder.h  digest.h  error.h  max_redirects.h  parameters.h  proxies.h  redirect.h  session.h  url.h  util.h
opt/: CMakeLists.txt
test/: CMakeLists.txt  get_tests.cpp  head_tests.cpp  server.cpp  session_tests.cpp
